Include encryption type and block name in a config file.

--- a/automation_tools/config.conf.example
+++ b/automation_tools/config.conf.example
@@ -4,6 +4,8 @@ NBD_SERVER_SCRIPT_DIR=/home/username/nbd
 NBD_SERVER_SCRIPT_NAME=nbdserver.sh
 FBE_FIWALK_DIR=/home/username/fbe
 FBE_FIWALK_NAME=..
+ENCRYPTION_NAME=FDE
+BLOCK=/dev/block/dm-0
 OUTPUT_XML_DUMP_BEFORE=dump_before
 OUTPUT_XML_DUMP_AFTER=dump_after
 APP_AUTOMATION_SCRIPT_DIR=..
