Include encryption type and block name in config file.

--- a/automation_tools/config_2.conf.example
+++ b/automation_tools/config_2.conf.example
@@ -4,6 +4,8 @@ NBD_SERVER_SCRIPT_DIR=...
 NBD_SERVER_SCRIPT_NAME=nbdserver.sh
 FBE_FIWALK_DIR=...
 FBE_FIWALK_NAME=filestructureExtractor.py
+ENCRYPTION_NAME=FBE
+BLOCK=/dev/block/mmcblk0p45
 OUTPUT_XML_DUMP_BEFORE=before_receive_message
 OUTPUT_XML_DUMP_AFTER=after_receive_message
 APP_AUTOMATION_SCRIPT_DIR=...
